; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_add_line_info.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_add_line_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.image = type { i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.image*, i8*, i64, i32)* @add_line_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_line_info(%struct.image* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.image*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.image* %0, %struct.image** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.image*, %struct.image** %5, align 8
  %10 = getelementptr inbounds %struct.image, %struct.image* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = load %struct.image*, %struct.image** %5, align 8
  %13 = getelementptr inbounds %struct.image, %struct.image* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = add nsw i32 %14, 1
  %16 = load %struct.image*, %struct.image** %5, align 8
  %17 = getelementptr inbounds %struct.image, %struct.image* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @ALLOC_GROW(%struct.TYPE_2__* %11, i32 %15, i32 %18)
  %20 = load i64, i64* %7, align 8
  %21 = load %struct.image*, %struct.image** %5, align 8
  %22 = getelementptr inbounds %struct.image, %struct.image* %21, i32 0, i32 1
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = load %struct.image*, %struct.image** %5, align 8
  %25 = getelementptr inbounds %struct.image, %struct.image* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  store i64 %20, i64* %29, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = load i64, i64* %7, align 8
  %32 = call i32 @hash_line(i8* %30, i64 %31)
  %33 = load %struct.image*, %struct.image** %5, align 8
  %34 = getelementptr inbounds %struct.image, %struct.image* %33, i32 0, i32 1
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %34, align 8
  %36 = load %struct.image*, %struct.image** %5, align 8
  %37 = getelementptr inbounds %struct.image, %struct.image* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i64 %39
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 2
  store i32 %32, i32* %41, align 4
  %42 = load i32, i32* %8, align 4
  %43 = load %struct.image*, %struct.image** %5, align 8
  %44 = getelementptr inbounds %struct.image, %struct.image* %43, i32 0, i32 1
  %45 = load %struct.TYPE_2__*, %struct.TYPE_2__** %44, align 8
  %46 = load %struct.image*, %struct.image** %5, align 8
  %47 = getelementptr inbounds %struct.image, %struct.image* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 8
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i64 %49
  %51 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %50, i32 0, i32 1
  store i32 %42, i32* %51, align 8
  %52 = load %struct.image*, %struct.image** %5, align 8
  %53 = getelementptr inbounds %struct.image, %struct.image* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 8
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %53, align 8
  ret void
}

declare dso_local i32 @ALLOC_GROW(%struct.TYPE_2__*, i32, i32) #1

declare dso_local i32 @hash_line(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
